# lyra

./: .gitignore  README.md  main.py  pyproject.toml  railway.json
backend/: .env.example  app.py
backend/council/: models.py  orchestrator.py  prompts.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  components.jsx  styles.css
frontend/src/pages/: Bench.jsx  Gallery.jsx  Landing.jsx  Run.jsx  Submit.jsx
